--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="bg">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Героят в Българската литература</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
@@ -92,17 +92,17 @@
     <h2>1. Какво е героят според Паисий, Славейков и Ботев?</h2>
     <div class="comparison">
       <div class="box">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Paisiy_Hilendarski.jpg" alt="Паисий">
+        <img src="paisiy.webp" alt="Паисий" />
         <h3>Паисий Хилендарски</h3>
         <p>Паисий създава образа на героя като съхранител на българската история и идентичност. Чрез „История славянобългарска“ той вдъхновява народа да не забравя своя произход и да се гордее с корените си.</p>
       </div>
       <div class="box">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Petko_Slaveykov.jpg" alt="Петко Славейков">
+        <img src="slaveykov.jpg" alt="Петко Славейков" />
         <h3>Петко Славейков</h3>
         <p>Славейков представя героя през призмата на обикновения българин. Чрез хумор и ирония той подчертава както силните, така и слабите черти на народа, като акцентира върху важността на самоосъзнаването.</p>
       </div>
       <div class="box">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Hristo_Botev_portrait.jpg" alt="Христо Ботев">
+        <img src="botev.jpg" alt="Христо Ботев" />
         <h3>Христо Ботев</h3>
         <p>Ботев издига героя в култ – саможертвен борец за свобода и правда. Неговият герой е идеалист, готов да умре за отечеството и народната свобода, често с трагична съдба.</p>
       </div>
@@ -117,8 +117,22 @@
   <section>
     <h2>3. Как си представяме героя</h2>
     <p>Героят е съчетание от духовна сила, мъдрост, чувство за дълг и саможертва. Представяме си го като човек, който е едновременно будител, реалист и борец. В него се събират чертите на тримата автори – мисълта на Паисий, погледа към народа на Славейков и пламенната решимост на Ботев.</p>
-    <img src="drawing.png" alt="Рисунка на героя" class="drawing">
-    <!-- Замени drawing.png с твоята рисунка -->
+    
+    <div class="comparison" style="justify-content: center; gap: 3rem; margin-top: 1rem;">
+      <div class="box" style="max-width: 250px;">
+        <img src="geroi-paisiy.jpg" alt="Герой според Паисий" style="border-radius: 12px; max-width: 100%;" />
+        <h4>Герой според Паисий</h4>
+      </div>
+      <div class="box" style="max-width: 250px;">
+        <img src="geroi-slaveykov.jpg" alt="Герой според Славейков" style="border-radius: 12px; max-width: 100%;" />
+        <h4>Герой според Славейков</h4>
+      </div>
+      <div class="box" style="max-width: 250px;">
+        <img src="geroi-botev.jpg" alt="Герой според Ботев" style="border-radius: 12px; max-width: 100%;" />
+        <h4>Герой според Ботев</h4>
+      </div>
+    </div>
+    
   </section>
 
   <footer>
