--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       flex-wrap: wrap;
       gap: 2rem;
       justify-content: center;
+      text-align: center; /* добавено центриране */
     }
     .box {
       background: white;
@@ -48,6 +49,7 @@
       transition: transform 0.3s, box-shadow 0.3s;
       text-align: center;
       max-width: 300px;
+      margin: 0 auto; /* центриране на блоковете */
     }
     .box:hover {
       transform: translateY(-5px);
