--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="bg">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Героят в Българската литература</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
@@ -14,6 +14,7 @@
       color: #222;
       overflow-x: hidden;
     }
+
     header {
       background: #1e1e1e;
       color: white;
@@ -23,24 +24,28 @@
       animation: slideDown 1s ease-out;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
+
     section {
       padding: 2.5rem 10%;
       animation: fadeIn 1.5s ease-in;
     }
+
     h2 {
       color: #2c2c2c;
       font-size: 1.8rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #f1da36;
       padding-bottom: 0.5rem;
+      text-align: center;
     }
+
     .comparison {
       display: flex;
       flex-wrap: wrap;
       gap: 2rem;
       justify-content: center;
-      text-align: center; /* добавено центриране */
     }
+
     .box {
       background: white;
       padding: 1rem;
@@ -49,12 +54,13 @@
       transition: transform 0.3s, box-shadow 0.3s;
       text-align: center;
       max-width: 300px;
-      margin: 0 auto; /* центриране на блоковете */
     }
+
     .box:hover {
       transform: translateY(-5px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
+
     .box img {
       max-width: 120px;
       height: auto;
@@ -62,12 +68,14 @@
       margin-bottom: 1rem;
       border: 3px solid #f1da36;
     }
+
     img.drawing {
       max-width: 100%;
       border-radius: 12px;
       margin-top: 1rem;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
+
     footer {
       text-align: center;
       padding: 1.5rem;
@@ -75,10 +83,12 @@
       color: white;
       font-size: 1rem;
     }
+
     @keyframes slideDown {
       from { transform: translateY(-100%); opacity: 0; }
       to { transform: translateY(0); opacity: 1; }
     }
+
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -94,19 +104,22 @@
     <h2>1. Какво е героят според Паисий, Славейков и Ботев?</h2>
     <div class="comparison">
       <div class="box">
-        <img src="paisiy.webp" alt="Паисий" />
+        <img src="paisiy.webp" alt="Паисий">
         <h3>Паисий Хилендарски</h3>
         <p>Паисий създава образа на героя като съхранител на българската история и идентичност. Чрез „История славянобългарска“ той вдъхновява народа да не забравя своя произход и да се гордее с корените си.</p>
+        <img src="geroi-paisiy.jpg" alt="Герой Паисий" class="drawing">
       </div>
       <div class="box">
-        <img src="slaveykov.jpg" alt="Петко Славейков" />
+        <img src="slaveykov.jpg" alt="Петко Славейков">
         <h3>Петко Славейков</h3>
         <p>Славейков представя героя през призмата на обикновения българин. Чрез хумор и ирония той подчертава както силните, така и слабите черти на народа, като акцентира върху важността на самоосъзнаването.</p>
+        <img src="geroi-slaveykov.jpg" alt="Герой Славейков" class="drawing">
       </div>
       <div class="box">
-        <img src="botev.jpg" alt="Христо Ботев" />
+        <img src="botev.jpg" alt="Христо Ботев">
         <h3>Христо Ботев</h3>
         <p>Ботев издига героя в култ – саможертвен борец за свобода и правда. Неговият герой е идеалист, готов да умре за отечеството и народната свобода, често с трагична съдба.</p>
+        <img src="geroi-botev.jpg" alt="Герой Ботев" class="drawing">
       </div>
     </div>
   </section>
@@ -119,22 +132,7 @@
   <section>
     <h2>3. Как си представяме героя</h2>
     <p>Героят е съчетание от духовна сила, мъдрост, чувство за дълг и саможертва. Представяме си го като човек, който е едновременно будител, реалист и борец. В него се събират чертите на тримата автори – мисълта на Паисий, погледа към народа на Славейков и пламенната решимост на Ботев.</p>
-    
-    <div class="comparison" style="justify-content: center; gap: 3rem; margin-top: 1rem;">
-      <div class="box" style="max-width: 250px;">
-        <img src="geroi-paisiy.jpg" alt="Герой според Паисий" style="border-radius: 12px; max-width: 100%;" />
-        <h4>Герой според Паисий</h4>
-      </div>
-      <div class="box" style="max-width: 250px;">
-        <img src="geroi-slaveykov.jpg" alt="Герой според Славейков" style="border-radius: 12px; max-width: 100%;" />
-        <h4>Герой според Славейков</h4>
-      </div>
-      <div class="box" style="max-width: 250px;">
-        <img src="geroi-botev.jpg" alt="Герой според Ботев" style="border-radius: 12px; max-width: 100%;" />
-        <h4>Герой според Ботев</h4>
-      </div>
-    </div>
-    
+    <img src="drawing.png" alt="Рисунка на героя" class="drawing">
   </section>
 
   <footer>
