--- a/index.html
+++ b/index.html
@@ -107,19 +107,16 @@
         <img src="paisiy.webp" alt="Паисий">
         <h3>Паисий Хилендарски</h3>
         <p>Паисий създава образа на героя като съхранител на българската история и идентичност. Чрез „История славянобългарска“ той вдъхновява народа да не забравя своя произход и да се гордее с корените си.</p>
-        <img src="geroi-paisiy.jpg" alt="Герой Паисий" class="drawing">
       </div>
       <div class="box">
         <img src="slaveykov.jpg" alt="Петко Славейков">
         <h3>Петко Славейков</h3>
         <p>Славейков представя героя през призмата на обикновения българин. Чрез хумор и ирония той подчертава както силните, така и слабите черти на народа, като акцентира върху важността на самоосъзнаването.</p>
-        <img src="geroi-slaveykov.jpg" alt="Герой Славейков" class="drawing">
       </div>
       <div class="box">
         <img src="botev.jpg" alt="Христо Ботев">
         <h3>Христо Ботев</h3>
         <p>Ботев издига героя в култ – саможертвен борец за свобода и правда. Неговият герой е идеалист, готов да умре за отечеството и народната свобода, често с трагична съдба.</p>
-        <img src="geroi-botev.jpg" alt="Герой Ботев" class="drawing">
       </div>
     </div>
   </section>
@@ -132,7 +129,17 @@
   <section>
     <h2>3. Как си представяме героя</h2>
     <p>Героят е съчетание от духовна сила, мъдрост, чувство за дълг и саможертва. Представяме си го като човек, който е едновременно будител, реалист и борец. В него се събират чертите на тримата автори – мисълта на Паисий, погледа към народа на Славейков и пламенната решимост на Ботев.</p>
-    <img src="drawing.png" alt="Рисунка на героя" class="drawing">
+    <div class="comparison">
+      <div class="box">
+        <img src="geroi-paisiy.jpg" alt="Герой Паисий" class="drawing">
+      </div>
+      <div class="box">
+        <img src="geroi-slaveykov.jpg" alt="Герой Славейков" class="drawing">
+      </div>
+      <div class="box">
+        <img src="geroi-botev.jpg" alt="Герой Ботев" class="drawing">
+      </div>
+    </div>
   </section>
 
   <footer>
