--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
+    .caption {
+      margin-top: 0.5rem;
+      font-weight: bold;
+    }
+
     footer {
       text-align: center;
       padding: 1.5rem;
@@ -132,18 +137,21 @@
     <div class="comparison">
       <div class="box">
         <img src="geroi-paisiy.jpg" alt="Герой Паисий" class="drawing">
+        <div class="caption">Паисий Хилендарски</div>
       </div>
       <div class="box">
         <img src="geroi-slaveykov.jpg" alt="Герой Славейков" class="drawing">
+        <div class="caption">Петко Славейков</div>
       </div>
       <div class="box">
         <img src="geroi-botev.jpg" alt="Герой Ботев" class="drawing">
+        <div class="caption">Христо Ботев</div>
       </div>
     </div>
   </section>
 
   <footer>
-    Проект по Български език • GitHub Site от Naskacha • 2025
+    Проект по Български език • GitHub Site от Атанас Тодоров и Габриел Динков • 2025
   </footer>
 
   <script>
