--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
     </div>
   </section>
 
+  <section>
+    <h2>4. Източници</h2>
+    <p>Информацията в този проект е събрана и структурирана с помощта на образователни ресурси, учебни материали и съвременни технологии. За синтезиране и формулиране на текстовете беше използван <strong>изкуствен интелект</strong>, за да се осигури яснота и точност.</p>
+    <p><a href="https://chat.openai.com" target="_blank" style="color: #1e1e1e; font-weight: bold;">Използван източник: ChatGPT</a></p>
+  </section>
+
+  <section>
+    <h2>5. Обратна връзка</h2>
+    <p>Благодарим, че разгледахте нашия сайт! Ще се радваме да отговорите на няколко кратки въпроса, за да разберем дали съдържанието е било полезно и разбираемо за вас.</p>
+    <ol style="margin-left: 1.5rem;">
+      <li>Какво научихте за героя в творчеството на Христо Ботев?</li>
+      <li>Кой от тримата автори ви впечатли най-много и защо?</li>
+      <li>Какво е герия според Паисий?</li>
+    </ol>
+    <p>Можете да ни пишете с мнение или идея за подобрение!</p>
+  </section>
+
   <footer>
     Проект по Български език • GitHub Site от Атанас Тодоров и Габриел Динков • 2025
   </footer>
